alignment issue transaction

--- a/src/app/statement/statement.component.css
+++ b/src/app/statement/statement.component.css
@@ -37,15 +37,14 @@ font-size: 16px;
 
 #tableid tr:nth-child(even){background-color: #e9e9e9; font-size: 13px;} */
 
-#cssid{
+/* #cssid{
     width: 20%;
     text-align:right;
-}
+} */
 
 input{
     Border-radius:5px;
-    Background-color:#ffffff ;
-    Font-size:8px;
+    Background-color:#ffffff ;  
     Color:#000000;   
 }
 hr{
